public/css/layout.css
/* ... */
.contact-info .info-list {
	margin: 35px 0 50px 0;
}

.contact-info .info-list ul li {
	position: relative;
	width: 100%;
}

.contact-info .info-list ul li strong {
	margin-right: 8px;
	width: auto;
}

.contact-info .author {
	font-family: "Mr Dafoe";
	font-size: 32px;
	color: #FFF;
}


@media (max-width: 720px) {
	.contact-form {
		padding-right: 0;
		float: none;
		width: 100%;
	}


	.contact-form .btn {
		top: -10px;
		display: block;
		width: 100%;
	}


	.contact-info {
		margin-top: 40px;
		float: none;
		width: 100%;
	}

}

/* - Pricing */
.pricing-items {
	margin: 0 -20px;
	font-size: 0;
}

.pricing-items .pricing-col {
	padding: 0 20px;
	display: inline-block;
	vertical-align: top;
	width: 50%;
}


.pricing-item {
	text-align: center;
    background: rgba(204, 204, 204, 0.1);
    padding: 80px 20px;
    transition: all ease-in-out 0.3s;
    width: inherit;
}

.pricing-item:hover {
	background: #68e0cf;
	border-color: #68e0cf;
}

.pricing-item:hover .icon {
	background: white;
}

.pricing-item:hover .icon i {
	color: #68e0cf;
}

.pricing-item .icon {
	margin: 0 auto;
    width: 64px;
    height: 64px;
    background: #68e0cf;
    border-radius: 5px;
    transition: all .3s ease-out 0s;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 20px;
    transform-style: preserve-3d;
}

.pricing-item .icon i {
	font-size: 28px;
}

.pricing-item .icon::before {
	position: absolute;
    content: '';
    left: -8px;
    top: -8px;
    height: 100%;
    width: 100%;
    background: rgba(255, 255, 255, 0.15);
    border-radius: 5px;
    transition: all .3s ease-out 0s;
    transform: translateZ(-1px);
}

.pricing-item:hover .icon::before {
	background: transparent;
}

.pricing-item h4 a {
	color: white;
	text-decoration: none;
	font-weight: 700;
	font-size: 24px;
	line-height: 1.2;
}

.pricing-item p {
	line-height: 24px;
    font-size: 14px;
    margin-bottom: 0;
	margin-top: 0;
}


/* - Testimonials */
.reviews-item {
	position: relative;
}

.reviews-item .image {
	float: left;
	margin-bottom: 15px;
	width: 70px;
	font-size: 0;
}

.reviews-item .image img {
	width: 100%;
	height: auto;
	border-radius: 100%;
	-moz-border-radius: 100%;
	-webkit-border-radius: 100%;
	-khtml-border-radius: 100%;
}

.reviews-item .info {
	padding-top: 10px;
	margin-left: 90px;
}

.reviews-item .name {
	font-size: 18px;
	color: #FFF;
	font-weight: 700;
}

.reviews-item .company {
	font-size: 12px;
	color: #68e0cf;
	font-weight: 600;
	text-transform: uppercase;
}

.reviews-item .text {
	position: relative;
	margin: 30px 0 0 0;
	padding: 0 0 0 40px;
	clear: both;
}

.reviews-item .text:before {
	content: '“';
	position: absolute;
	left: 0;
	top: 0;
	font-size: 32px;
	color: #68e0cf;
	font-weight: 700;
}


@media (max-width: 720px) {
	.reviews-item .image {
		float: none;
		margin-left: auto;
		margin-right: auto;
	}


	.reviews-item .info {
		padding-top: 0;
		margin-left: 0;
	}


	.reviews-item .text {
		margin: 15px 0 0 0;
		padding: 15px 0 0 0;
	}

}

blockquote {
	margin: 25px 0;
	padding: 0 0 0 20px;
	font-size: 12px;
	line-height: 24px;
	color: #999;
	font-style: italic;
	font-weight: 300;
	border-left: 2px solid #68e0cf;
}


blockquote code {
	padding: 2px;
	display: inline;
}


iframe, object {
	max-width: 100%;
}


/* - Footer */
.footer {
	padding: 0;
	position: fixed;
	bottom: 40px;
	right: 0;
	width: 92px;
	height: 1px;
	z-index: 99;
}

.footer:before {
	content: '';
	position: absolute;
	bottom: -50vh;
	left: 0;
	width: 1px;
	height: 200vh;
	background: #585d65;
}

.footer .socials {
	margin-left: -27px;
	position: absolute;
	left: 50%;
	bottom: 0;
	width: 54px;
}

.footer .socials a {
	position: relative;
	display: block;
	margin-bottom: 15px;
	height: 54px;
	line-height: 54px;
	font-size: 16px;
	color: #FFF;
	text-align: center;
	background: #373b40;
	border: 1px solid #585d65;
	border-radius: 54px;
	-moz-border-radius: 54px;
	-webkit-border-radius: 54px;
	-khtml-border-radius: 54px;
	transition: all 0.7s cubic-bezier(0.165, 0.85, 0.45, 1);
	-moz-transition: all 0.7s cubic-bezier(0.165, 0.85, 0.45, 1);
	-webkit-transition: all 0.7s cubic-bezier(0.165, 0.85, 0.45, 1);
	-o-transition: all 0.7s cubic-bezier(0.165, 0.85, 0.45, 1);
}

.footer .socials a:last-child {
	margin-bottom: 0;
}

.footer .socials a:hover {
	color: #68e0cf;
}

/* ========================================================================== 
-2.5 Scroll To Up 
========================================================================== */
.back-to-top {
	display: none;
	position: fixed;
	bottom: 20px;
	left: 20px;
}

.back-to-top img {
	display: block;
	width: 40px;
	height: 40px;
	-webkit-transition: all 0.3s ease-in-out;
	-moz-transition: all 0.3s ease-in-out;
	-o-transition: all 0.3s ease-in-out;
	transition: all 0.3s ease-in-out;
}

/* section footer tablet */
@media (max-width: 1199px) {
	.footer {
		margin: 0 0 50px 0;
		padding: 0;
		position: relative;
		bottom: auto;
		height: auto;
		width: 100%;
	}


	.footer:before {
		top: 50%;
		bottom: auto;
		left: 0;
		width: 100%;
		height: 1px;
	}


	.footer .socials {
		margin-left: 0;
		position: relative;
		left: 0;
		width: 100%;
		text-align: center;
		font-size: 0;
	}


	.footer .socials a {
		display: inline-block;
		margin-left: 6px;
		margin-right: 6px;
		margin-bottom: 0;
		width: 54px;
	}

}

/* section footer mobile */
/* - Popups */
.popup-box {
	margin: 30px auto;
	width: 520px;
	background: #373b40;
	position: relative;
	padding: 0;
}


@media (max-width: 720px) {
	.popup-box {
		width: 440px;
	}

}

@media (max-width: 480px) {
	.popup-box {
		width: 320px;
	}

}

.popup-box .image {
	height: 380px;
	background-repeat: no-repeat;
	background-position: center center;
	background-size: cover;
}


.popup-box .image img {
	width: 100%;
	height: auto;
	transform: none !important;
	-webkit-transform: none !important;
	-moz-transform: none !important;
	-o-transform: none !important;
}


.popup-box .desc {
	padding: 35px;
}
/* ... */

